--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro">Combine other people to get  <span onclick="document.body.style.background='url(img/petey.png)';">the man, the myth, the legend<strong> DILLON </strong></span></p>
+    <p class="game-intro">Combine other people to get  <span onclick="document.body.style.background='url(img/petey.jpeg)';">the man, the myth, the legend<strong> DILLON </strong></span></p>
 
     <div class="game-container">
       <div class="game-message">
