--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 <body>
+  <div class="alert">
+  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+  <strong>SPECIAL OFFER</strong> dm BR-1132ad#0032 to learn more about how to get yourself on this website!
+  </div>
   <div class="container">
     <div class="heading">
       <h1 class="title">getDILLON</h1>
