--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> <strong>You probably already know how to play this game</strong>
+      <strong class="important">How to play:</strong> <strong>Use the arrow keys or WASD to combine the other people and get DILLON!</strong>
      
     </p>
     <hr>
     <p>
-    NOTE: This is is not in any particular order
+    NOTE: This is is not in a particular order.
     </p>
     <hr>
  
