--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="alert">
   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-  <strong>SPECIAL OFFER</strong> dm BR-1132ad#0032 to learn more about how to get yourself on this website! I see mr GJ
+  <strong>SPECIAL OFFER</strong> Hello GJ.
   </div>
   <div class="container">
     <div class="heading">
