--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="alert">
   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-  <strong>SPECIAL OFFER</strong> Jay is my goat
+  <strong>SPECIAL OFFER</strong> Sidh Jaddu is my goat!
   </div>
   <div class="container">
     <div class="heading">
